# h743ii_lcd

./: .gitmodules  .mxproject  .stm32env  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  h743ii_lcd.ioc  openocd.cfg
User/lib/sdcp/: .gitignore  CMakeLists.txt  README.md
User/lib/sdcp/examples/: sdcp_raw_socket_io.h  sdcp_udp_io.h
User/lib/sdcp/include/: sdcp.h  sdcp_comm.h  sdcp_crc16.h  sdcp_def.h  sdcp_frame.h  sdcp_impl.h  sdcp_io_impl.h  sdcp_packer.h  sdcp_shcfg.h  sdcp_state.h
User/lib/sdcp/src/: sdcp.cpp  sdcp_impl.cpp  sdcp_shcfg.cpp
User/lib/utools/: .gitignore  CMakeLists.txt  README.md
User/lib/utools/src/: fake_data.h  utools.h  utools_cfg.h  utools_cfg_def.h  utools_macro.h
User/lib/utools/src/about_mang/: about_mang.cpp  about_mang.h  about_mang_def.h
User/lib/utools/src/coded/: README.md  base64.cpp  base64.h  bit_packer.h  byte_packer.h  byte_struct.h  crc.cpp  crc.h  endian.cpp  endian.h  hexstr.cpp  hexstr.h  md5.cpp  md5.h  sha1.cpp  sha1.h  uuid.h
User/lib/utools/src/collab/: collab.h  collab_schedule.h  collab_task.h  collab_timer.h  dispatcher.h  flow_task.h  func_wrapper.h  spin_wait.h  sync_partner.h  sync_queue.h  task_pool.h  task_sequence.h  utcondition_variable.h  utmutex.h  wait_notify.h
User/lib/utools/src/fliter/: arithmetic_average.h  first_order_fliter.h  kalman.h  least_square_method.h  limit_breadth.h  limit_variable_rate_fliter.h  median_average.h  median_fliter.h  moving_average.h  moving_average_quick.h  variance.h
User/lib/utools/src/logger/: logger.cpp  logger.h
User/lib/utools/src/pattern/: event_bus.h  observe.h  pubsub.h  singleton.h  state_machine.h  sync_event_bus.h
User/lib/utools/src/ufmt/: f_string.cpp  f_string.h  str_conv.h
User/lib/utools/src/umath/: umath.h
User/lib/utools/src/umemory/: any_type_map.h  ring_buffer.h  ring_queue.h  shared_cache.h  umemory.h
User/lib/utools/src/umempool/: mempool.h  mempool_ipml.cpp  mempool_ipml.h
User/lib/utools/src/utime/: stable_interval_invoker.h  time_invoker.h  (+3 more)
(+132 files in other folders)
